Replaced hand-written L2 by generated L2, along with Python generators L2 requirements vary per application, hence need to be generated. Generators are Python programs, using a per-application JSON file with L2 spec. Also updated documentation to show HW-side and Host-side build flows for simulation.

--- a/doc/Figs/Makefile
+++ b/doc/Figs/Makefile
@@ -22,6 +22,8 @@ FILES += RSN_2025-12-17.000.00_virtual_FPGA_arch.png
 FILES += RSN_2025-12-19.000.00_virtual_FPGA_modules.png
 FILES += RSN_2025-12-19.001.00_virtual_FPGA_flows.png
 FILES += RSN_2025-12-28.000.00_virtual_FPGA_host_comms.png
+FILES += RSN_2026-02-01.000.00_Virtual_FPGA_HW_Sim_Build_flow.png
+FILES += RSN_2026-02-01.001.00_Virtual_FPGA_Host_Sim_Build_flow.png
 
 .PHONY: all
 all: $(FILES)
